# py_load_eurostat

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ADAPTER_DEVELOPMENT_GUIDE.md  Dockerfile  EUROSTAT_DATASOURCE.md  FRD_COMPLIANCE_ANALYSIS.md  Jules_FRD_Audit.md  LICENSE  README.md  docker-compose.yml  managed_datasets.yml.example  py_load_eurostat_FRD.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml  main.yml
docs/: CI_CD_STRATEGY.md
src/eurostat_loader/: __init__.py  config.py  fetcher.py  models.py  parser.py  pipeline.py  transformer.py
src/eurostat_loader/loader/: base.py  postgresql.py
src/py_load_eurostat/: cli.py  config.py  fetcher.py  models.py  parser.py  pipeline.py  transformer.py
src/py_load_eurostat/loader/: base.py  factory.py  postgresql.py  sqlite.py
tests/: .gitkeep  conftest.py  test_imports.py
tests/fixtures/: codelist_geo.xml  dsd_tps00001.xml  dsd_tps00001_lower.xml  dsd_tps00001_simple.xml  sample_inventory.csv  sample_inventory.tsv  sample_inventory_new.csv  sample_toc.tsv  sample_toc.xml  sample_toc_new.xml  unparsable_inventory.tsv
tests/integration/: test_batch_processing.py  test_e2e_pipeline.py  test_error_handling.py  test_example.py  test_factory_and_sqlite.py  test_full_pipeline.py  test_integration_postgres_loader.py  test_pipeline.py  test_pipeline_features.py  test_postgres_loader.py  test_schema_evolution_sqlite.py
tests/unit/: conftest.py  test_cli.py  test_config.py  test_example.py  test_fetcher.py  test_loader_base.py  test_loader_factory.py  test_loader_sqlite.py  test_loader_sqlite_extra.py  test_parser.py  test_parser_edge_cases.py  test_parser_extra.py  test_pipeline.py  test_postgres_loader_unit.py  test_transformer.py  test_unit_postgres_loader.py
